feat: registrar baixa de estoque
